--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro-compressor": "^1.1.1",
     "astro-purgecss": "^5.3.0",
     "astro-seo": "^0.8.4",
+    "lucide-astro": "^0.537.0",
     "purgecss": "^7.0.2",
     "tailwindcss": "^4.1.11"
   },
