--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "daisyui": "^5.0.50",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1"
