--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro-compressor": "^1.1.2",
     "astro-purgecss": "^5.3.0",
     "astro-seo": "^0.8.4",
+    "astro-swiper": "^1.4.0",
     "lucide-astro": "^0.537.0",
     "purgecss": "^7.0.2",
     "tailwindcss": "^4.1.13"
